@@ -1,7 +1,7 @@
 #
 # Server-side
 <reply name="1">
-<data>
+<data mode="text">
 HTTP/1.1 200 OK
 Date: Thu, 09 Nov 2010 14:49:00 GMT
 Server: test-server/fake
