@@ -35,7 +35,7 @@ Content-Type: text/html
 Content-Length: 32
 
 run 3: overwrite cookie 1 and 4
-</data5>
+</data3>
 </reply>
 
 # Client-side
@@ -56,7 +56,7 @@ http://%HOSTIP:%HTTPPORT/506
 
 # Verify data after the test has been "shot"
 <verify>
-<stdout>
+<stdout mode="text">
 GLOBAL_INIT
 SHARE_INIT
 CURL_LOCK_DATA_COOKIE
@@ -145,7 +145,7 @@ GLOBAL_CLEANUP
 <stderr>
 http://%HOSTIP:%HTTPPORT/506 
 </stderr>
-<file name="log/jar506">
+<file name="log/jar506" mode="text">
 # Netscape HTTP Cookie File
 # http://www.netscape.com/newsref/std/cookie_spec.html
 # This file was generated by libcurl! Edit at your own risk.
