@@ -52,7 +52,7 @@ Host: 127.0.0.1:%HTTPPORT
 Accept: */*
 
 </protocol>
-<stdout>
+<stdout mode="text">
 hello
 </stdout>
 </verify>
